# rimpack2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  main.py  pyproject.toml
rimpack/: config.py  constants.py  exceptions.py  listfile.py  main.py  modpack.py  packfile.py  resolve.py  steamworks.py  tools.py  toposort.py  types.py
rimpack/cli/: main.py
rimpack/core/: config.py  exceptions.py  listfile.py  modpack.py  packfile.py  resolve.py  steamworks.py  toposort.py  types.py
rimpack/core/mod/: about.py  modfolder.py
rimpack/mod/: about.py  modfolder.py
rimpack/parsers/: config.py  modpack_config.py  module.py
specs/: about-xml.md  cli-config.md  load-order.md  mod-list.md  modpack-format.md  steam-workshop.md
tests/: _test_config.py  conftest.py  helpers.py  test_cli.py  test_cli_add.py  test_cli_init.py  test_config.py  test_list_file_parser.py  test_listfile.py  test_mod_about.py  test_packfile.py  test_resolve.py  test_steamworks.py  test_tools.py  test_toposort.py
tests/data/mods/Anomaly/About/: About.xml
tests/data/mods/Biotech/About/: About.xml
tests/data/mods/Ideology/About/: About.xml
tests/data/mods/Odyssey/About/: About.xml
tests/data/mods/Royalty/About/: About.xml
tests/data/root_mods/ColonyManager/About/: About.xml
tests/data/workshop_mods/717575199/About/: About.xml  Manifest.xml
tests/data/workshop_mods/724602224/About/: About.xml  LoadFolders.xml  Manifest.xml
