[project]
name = "rimpack"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.3",
    "tomlkit>=0.14.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "prek>=0.3.8",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
