[project]
name = "rimpack"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "platformdirs>=4.9.4",
  "pydantic>=2.12.5",
  "rich>=14.3.3",
  "steamworkspy>=0.0.2",
  "tomlkit>=0.14.0",
  "typer>=0.24.1",
]

[tool.uv]
package=true

[dependency-groups]
dev = ["basedpyright>=1.38.3", "prek>=0.3.8", "pytest>=9.0.2", "ruff>=0.15.7"]

[tool.pytest.ini_options]
pythonpath = ["."]
#addopts = ["--basetemp=.pytest-tmp"]

[project.scripts]
rimpack = "rimpack.cli.main:main"
