[project]
name = "rimpack"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "platformdirs>=4.9.4",
  "pydantic>=2.12.5",
  "pyparsing>=3.3.2",
  "rich>=14.3.3",
  "ruamel-yaml>=0.19.1",
  "steamworkspy>=0.0.2",
  "tomlkit>=0.14.0",
  "typedload>=2.40",
  "typer>=0.24.1",
]

[tool.uv]
package = true

[dependency-groups]
dev = ["basedpyright>=1.38.3", "prek>=0.3.8", "pytest>=9.0.2", "ruff>=0.15.7"]

[tool.pytest.ini_options]
pythonpath = ["."]
#addopts = ["--basetemp=.pytest-tmp"]

[project.scripts]
rimpack = "rimpack.cli.main:main"

[[tool.pyright.executionEnvironments]]
root = "buildstock_fetch"
extraPaths = ["."]

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]
reportAny = "none"
reportUnusedCallResult = "none"
reportUnusedCoroutine = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportMissingTypeStubs = "none"
reportUnusedParameter = "none"
reportUntypedFunctionDecorator = "none"
reportArgumentType = "none"
